// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirportArrivalTimelineEvent type should have valid fields 1`] = `
Object {
  "location": Object {
    "args": Array [],
    "description": "Location of departure",
    "isDeprecated": false,
    "name": "location",
    "resolve": [Function],
    "type": "RouteStop",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`ArrivalTimelineEvent type should have valid fields 1`] = `
Object {
  "location": Object {
    "args": Array [],
    "description": "Location of arrival",
    "isDeprecated": false,
    "name": "location",
    "resolve": [Function],
    "type": "RouteStop",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`BoardingTimelineEvent type should have valid fields 1`] = `
Object {
  "gate": Object {
    "args": Array [],
    "description": "Gate at which boarding is done",
    "isDeprecated": false,
    "name": "gate",
    "type": "String",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`BookedFlightTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`BookingConfirmedTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`DepartureTimelineEvent type should have valid fields 1`] = `
Object {
  "location": Object {
    "args": Array [],
    "description": "Location of departure",
    "isDeprecated": false,
    "name": "location",
    "resolve": [Function],
    "type": "RouteStop",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`DownloadBoardingPassTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`DownloadETicketTimelineEvent type should have valid fields 1`] = `
Object {
  "ticketUrl": Object {
    "args": Array [],
    "description": "URL of the eTicket",
    "isDeprecated": false,
    "name": "ticketUrl",
    "type": "String",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`DownloadReceiptTimelineEvent type should have valid fields 1`] = `
Object {
  "receiptUrl": Object {
    "args": Array [],
    "description": "URL of the receipt/invoice",
    "isDeprecated": false,
    "name": "receiptUrl",
    "type": "String",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`LeaveForAirportTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`PaymentConfirmedTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`TransportFromAirportTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;
